Add style to content section

--- a/index.html
+++ b/index.html
@@ -30,31 +30,45 @@
     </div>
   </section>
 
-  <!-- About
-  Services
-  Projects
-  Contact
+  <section class="content">
+    <div class="content-1">
+      <h3>Transform your brand</h3>
+      <p>
+        We are a full-service creative agency specializing in helping brands grow fast. 
+        Engage your clients through compelling visuals that do most of the marketing for you.
+      </p>
+      <a href="#">LEARN MORE</a>
+    </div>
+    <div class="content-2"></div>
+    <div class="content-3"></div>
+    <div class="content-4">
+      <h3>Stand out to the right audience</h3>
+      <p>
+        Using a collaborative formula of designers, researchers, photographers, 
+        videographers, and copywriters, we’ll build and extend your brand in digital places. 
+      </p>
+      <a href="#">Learn more</a>
+    </div>
+    <div class="content-5">
+      <h3>Graphic Design</h3>
+      <p>
+        Great design makes you memorable. We deliver artwork that underscores your brand 
+        message and captures potential clients’ attention.
+      </p>
+    </div>
+    <div class="content-6">
+      <h3>Photography</h3>
+      <p>
+        Increase your credibility by getting the most stunning, high-quality photos 
+        that improve your business image.
+      </p>
+    </div>
+  </section>
 
-  We are creatives
+  <!-- 
 
-  Transform your brand
-
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
-
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+  
+  
 
   Client testimonials
 
