--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         Using a collaborative formula of designers, researchers, photographers, 
         videographers, and copywriters, we’ll build and extend your brand in digital places. 
       </p>
-      <a href="#">Learn more</a>
+      <a href="#">LEARN MORE</a>
     </div>
     <div class="content-5">
       <h3>Graphic Design</h3>
