--- a/index.html
+++ b/index.html
@@ -65,24 +65,50 @@
     </div>
   </section>
 
+  <section class="testi">
+    <h3>CLIENT TESTIMONIALS</h3>
+    <div class="testi-container">
+      <div class="card">
+        <img src="/images/image-emily.jpg" alt="">
+        <p>
+          We put our trust in Sunnyside and they delivered, making sure 
+          our needs were met and deadlines were always hit.
+        </p>
+        <span class="name">Emily R.</span>
+        <span class="job">Marketing Director</span>
+      </div>
+      <div class="card">
+        <img src="/images/image-thomas.jpg" alt="">
+        <p>
+          Sunnyside’s enthusiasm coupled with their keen interest 
+          in our brand’s success made it a satisfying and enjoyable experience.
+        </p>
+        <span class="name">Thomas S.</span>
+        <span class="job">Chief Operating Officer</span>
+      </div>
+      <div class="card">
+        <img src="/images/image-jennie.jpg" alt="">
+        <p>
+          Incredible end result! Our sales increased over 400% when we worked 
+          with Sunnyside. Highly recommended!
+        </p>
+        <span class="name">Jennie F.</span>
+        <span class="job">Business Owner</span>
+      </div>
+    </div>
+  </section>
+
   <!-- 
 
+
+
   
   
+ 
 
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
+  
+  
+  
 
   About
   Services
